Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal
  
Version 1.4.06-dev
 + Added per-player scoreboards to track overall skill levels.
 + Added tab-complete support for all commands
 + Added ability to configure drops from Shake in treasures.yml
 + Added "Master Angler" ability to Fishing.
 + Added health display for mobs during combat.
 + Added new API method to McMMOPlayerLevelUpEvent to set levels gained
 + Added new permission node for /ptp; mcmmo.commands.ptp.send (enabled by default)
 + Added configurable cooldown and warmup times when using /ptp
 + Added a new Party item share category "Misc" which contains a list of configurable items. (By default all tools and armor)
 = Fixed bug where players were able to join the same party multiple times
 = Fixed displaying partial names when trying to use /ptp
 = Fixed wolves from Call of the Wild only having 8 health
 = Fixed bug where /party chat was not working
 = Fixed bug where experience commands were adding levels to all skills when they shouldn't
 = Fixed mcmmo.commands.ptp.send not being set by default
 = Fixed NPE when trying to tab-complete /mctop
 = Fixed Fishing treasures always having the same enchants
 = Fixed Smelting returning ink sacs instead of Lapis when double-dropping
 = Fixed bug where players could remain in party chat after leaving or being kicked from a party.
 ! Changed Berserk to add items to inventory rather than denying pickup
 ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
 ! Changed Chimaera Wing's recipe result to use the ingredient Material
 ! Changed Repair to ask a confirmation of the player when he tries to repair an enchanted item
 ! Players will no longer pickup items to their hotbar while using Unarmed
 ! ExperienceAPI methods will now throw InvalidSkillException if the skill name passed in is invalid.