@@ -14,6 +14,7 @@ import com.gmail.nossr50.mcMMO;
 import com.gmail.nossr50.datatypes.player.McMMOPlayer;
 import com.gmail.nossr50.datatypes.player.PlayerProfile;
 import com.gmail.nossr50.datatypes.skills.SkillType;
+import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.skills.SkillUtils;
 
 public class ScoreboardManager {
@@ -33,10 +34,15 @@ public class ScoreboardManager {
 
     public static final Map<String, Scoreboard> PLAYER_STATS_SCOREBOARDS = new HashMap<String, Scoreboard>();
 
+    public static Scoreboard globalStatsScoreboard;
+
     private static Objective playerStats;
+    private static Objective globalPowerlevel;
 
     public final static String PLAYER_STATS_HEADER   = "mcMMO Stats";
     public final static String PLAYER_STATS_CRITERIA = "Player Skill Levels";
+
+    public final static String GLOBAL_STATS_POWER_LEVEL = "Power Level";
 
     public static void setupPlayerStatsScoreboard(String playerName) {
         if (PLAYER_STATS_SCOREBOARDS.containsKey(playerName)) {
@@ -51,10 +57,33 @@ public class ScoreboardManager {
         PLAYER_STATS_SCOREBOARDS.put(playerName, scoreboard);
     }
 
+    public static void setupGlobalStatsScoreboard() {
+        if (globalStatsScoreboard != null) {
+            return;
+        }
+
+        globalStatsScoreboard = mcMMO.p.getServer().getScoreboardManager().getNewScoreboard();
+
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.ACROBATICS), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.ARCHERY), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.AXES), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.EXCAVATION), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.FISHING), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.HERBALISM), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.MINING), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.REPAIR), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.SMELTING), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.SWORDS), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.TAMING), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.UNARMED), PLAYER_STATS_CRITERIA);
+        globalStatsScoreboard.registerNewObjective(SkillUtils.getSkillName(SkillType.WOODCUTTING), PLAYER_STATS_CRITERIA);
+
+        globalPowerlevel = globalStatsScoreboard.registerNewObjective(GLOBAL_STATS_POWER_LEVEL, PLAYER_STATS_CRITERIA);
+    }
+
     public static void enablePlayerStatsScoreboard(McMMOPlayer mcMMOPlayer) {
         Player player = mcMMOPlayer.getPlayer();
-        String playerName = player.getName();
-        Scoreboard scoreboard = PLAYER_STATS_SCOREBOARDS.get(playerName);
+        Scoreboard scoreboard = PLAYER_STATS_SCOREBOARDS.get(player.getName());
 
         if (player.getScoreboard() == scoreboard) {
             return;
@@ -62,6 +91,21 @@ public class ScoreboardManager {
 
         updatePlayerStatsScores(mcMMOPlayer);
         player.setScoreboard(scoreboard);
+    }
+
+    public static void enableGlobalStatsScoreboard(Player player, String skillName) {
+        if (player.getScoreboard().getObjective(DisplaySlot.SIDEBAR) == globalStatsScoreboard.getObjective(DisplaySlot.SIDEBAR)) {
+            return;
+        }
+
+        if (skillName.equalsIgnoreCase("ALL")) {
+            updateGlobalStatsScores();
+        }
+        else {
+            updateGlobalStatsScores(skillName);
+        }
+
+        player.setScoreboard(globalStatsScoreboard);
     }
 
     public static void updatePlayerStatsScore(McMMOPlayer mcMMOPlayer, SkillType skill) {
@@ -75,5 +119,24 @@ public class ScoreboardManager {
         for (SkillType skill : SkillType.values()) {
             playerStats.getScore(server.getOfflinePlayer(SkillUtils.getSkillName(skill))).setScore(profile.getSkillLevel(skill));
         }
+    }
+
+    private static void updateGlobalStatsScores(String skillName) {
+        SkillType skill = SkillType.getSkill(skillName);
+        Objective objective = globalStatsScoreboard.getObjective(skillName);
+
+        for (McMMOPlayer mcMMOPlayer : UserManager.getPlayers().values()) {
+            objective.getScore(mcMMOPlayer.getPlayer()).setScore(mcMMOPlayer.getProfile().getSkillLevel(skill));
+        }
+
+        objective.setDisplaySlot(DisplaySlot.SIDEBAR);
+    }
+
+    private static void updateGlobalStatsScores() {
+        for (McMMOPlayer mcMMOPlayer : UserManager.getPlayers().values()) {
+            globalPowerlevel.getScore(mcMMOPlayer.getPlayer()).setScore(mcMMOPlayer.getPowerLevel());
+        }
+
+        globalPowerlevel.setDisplaySlot(DisplaySlot.SIDEBAR);
     }
 }
